Update data/dataexchange/src/main/java/tech/pegasys/teku/data/SlashingProtectionImporter.java
Co-authored-by: Adrian Sutton <adrian@symphonious.net>